# parallel-programming

./: README.md
Lab1/: CMakeLists.txt  CMakeSettings.json  Conclusion.txt  README.md  Task.txt  main.cpp  matrix.cpp  matrix.h  matrixA.txt  matrixB.txt  matrix_100.txt  matrix_200.txt  matrix_30.txt  matrix_400.txt  matrix_50.txt  matrix_500.txt  matrix_70.txt  matrix_generator.py  result.txt  result.xlsx  script.py
Lab2/: README.md  Task.txt  check.py  dataA.txt  main.cpp  matrix.cpp  matrix_generator.py  matrix_math.cpp  matrix_math.h  output.txt  result — копия.xlsx
Lab3/: README.md  Task.txt  matrix.cpp  result.xlsx
Lab5/: README.md  Task.txt  main.cpp  matrix_generator.py  result.xlsx
